Frame Rate control, and all rules, working on dynamic controls

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,12 @@ body {
 .slider-bar {
     width: 80% !important;
 }
+
+.title {
+    font-size: 60px;
+    text-align: center;
+}
+
+.clock-number {
+    width: 30% !important;
+}
